# clean_architecture

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
src/: __main__.py  config.py
src/application/: config.py
src/application/use_case/: base.py
src/domain/errors/: codes.py  exceptions.py  handlers.py  models.py
src/domain/shared/: env.py  sentinel.py
src/infrastructure/auth/: config.py
src/infrastructure/database/: base.py  config.py  database.py  naming.py  uow.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/repository/: base.py
src/infrastructure/minio/: config.py
src/presenter/rest/: app_factory.py  middleware.py
src/presenter/rest/api/: router.py
